--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <br>
     <h1>Curriculum Vitae</h1>
     <h2>Tolulope Adekoya</h2>
-    <img src="/4.1 Webpages/assets/images/Tolu.jpeg" width="200" height="200" alt="Tolu holding a drink">
+    <img src="/Capstone project 1/Tolu.jpeg" width="200" height="200" alt="Tolu holding a drink">
     
 
     <!--Summary-->
